# pienoon

./: .classpath  .cproject  .cvsignore  .gitignore  .gitmodules  .hgignore  .project  Android.mk  AndroidManifest.xml  CHANGES  CHANGES.txt  CMakeLists.txt  CWprojects.sea.hqx  MPWmake.sea.hqx  Makefile-EXE.wat  Makefile.am  Makefile.in  Makefile.wat  README  README.txt  Readme.md  SDL2_mixer.spec  SDLMIXER.lnk  SDL_mixer.h  SDL_mixer.qpg.in  SDL_mixer.spec.in  Watcom.mif  acinclude.m4  aclocal.m4  ai__controller_8h_source.html  analytics__tracking_8h_source.html  angle_8h_source.html  async__loader_8h_source.html  audio__engine_8h_source.html  autogen.sh  bezier_8h_source.html  build.gradle  build.sh  build_apk_sdl.sh  build_install_run.sh  (+374 more)
VisualC/: SDL_mixer.dsp  SDL_mixer.dsw  SDL_mixer.sln  SDL_mixer.vcproj  SDL_mixer_VS2008.vcproj  SDL_mixer_VS2010.vcxproj  Version.rc
VisualC/native_midi/: native_midi.dsp  native_midi.vcproj
VisualC/playmus/: playmus.dsp  playmus.vcproj  playmus_VS2008.vcproj
VisualC/playwave/: playwave.dsp  playwave.vcproj  playwave_VS2008.vcproj
VisualC/timidity/: timidity.dsp  timidity.vcproj
Xcode/: Info-Framework__Upgraded_.plist  mkxcode.csh
Xcode-iOS/SDL_mixer.xcodeproj/: project.pbxproj
Xcode/SDL_mixer.xcodeproj/: project.pbxproj
assets/: licenses.txt
assets/shaders/: cardboard.glslf  cardboard.glslv  color.glslf  color.glslv  font.glslv  grayscale.glslf  lit_textured_normal.glslf  lit_textured_normal.glslv  simple_shadow.glslf  simple_shadow.glslv  textured.glslf  textured.glslv
assets/textures/: KO.tga  ShelfTop.tga  ambient_occlusion_shadow.tga  arrow.tga  bush.tga  cloud.tga  cloud_shadow.tga  firing.tga  firing_back.tga  happy_back.tga  happy_front.tga  hit01.tga  hit01_back.tga  hit02.tga  hit02_back.tga  hit03.tga  hit03_back.tga  hit04.tga  hit04_back.tga  idleback.tga  idlefront.tga  ko.tga  ko_back.tga  loaded01.tga  loaded01_back.tga  loaded02.tga  loaded02_back.tga  loaded03.tga  loaded03_back.tga  loading.tga  loading_back.tga  pie_L01.tga  pie_L02.tga  pie_L03.tga  pie_level01.tga  pie_level02.tga  pie_level03.tga  popcicle_stick.tga  popcicle_stick_back.tga  shelf_edge.tga  (+16 more)
build-scripts/: makedep.sh
cmake/freetype/: CMakeLists.txt
cmake/harfbuzz/: CMakeLists.txt
cmake/libogg/: CMakeLists.txt
cmake/libvorbis/: CMakeLists.txt
cmake/sdl_mixer/: CMakeLists.txt
cmake/webp/: CMakeLists.txt
debian/: changelog  control  libsdl2-mixer-dev.install  libsdl2-mixer.install  rules
disttools/: config.json  push_package.py
docs/: generate_docs.py
docs/src/: doxyfile  doxygen_layout.xml  engine.md  footer.html  index.md
jni/: Android.mk  Application.mk  android_config.mk  build_flatc.bat  msbuild.py
jni/SDL/: Android.mk
jni/SDL-mixer/: Android.mk
jni/gpg/: Android.mk
jni/src/: Android.mk
mikmod/: AUTHORS  Makefile.am  Makefile.in  README  drv_nos.c  drv_sdl.c  license.txt  load_it.c  load_mod.c  load_s3m.c  load_xm.c  mdreg.c  mdriver.c  mdulaw.c  mikmod.h  mikmod_build.h  mikmod_internals.h  mloader.c  mlreg.c  mlutil.c  mmalloc.c  mmerror.c  mmio.c  mmio.h  mplayer.c  munitrk.c  mwav.c  npertab.c  ptform.h  s3m_it.c  sloader.c  tdefs.h  virtch.c  virtch2.c  virtch_common.c
native_midi/: Makefile.am  native_midi.h  native_midi_common.c  native_midi_common.h  native_midi_haiku.cpp  native_midi_mac.c  native_midi_macosx.c  native_midi_win32.c
native_midi_gpl/: Makefile.am  README  native_midi_gpl.c
pie_noon_ios/: build_ios.sh  pie_noon_ios.plist
projects/VisualStudio2010/: SDL_VS2010.vcxproj  SDLmain_VS2010.vcxproj  splat.sln  splat.vcxproj  splat.vcxproj.filters
rawassets/: config.json
rawassets/materials/: button_blank.json  character_hit_by_pie_frame0.json  character_hit_by_pie_frame3_back.json  character_idle_back.json  character_knocked_out_back.json  character_load2.json  character_load3_back.json  floor_shadows.json  msx_tutorial_2.json  msx_tutorial_3.json  multiscreen_button.json  splash_menu.json  text_1.json  text_choose_action_and_target.json  text_connection_lost.json  text_game_modes.json  text_host_disconnected.json  text_join_in.json  text_sign_out.json  (+11 more)
scripts/: build_assets.mk  build_assets.py  continuous_build.sh  export.py  jsontobin.sh  package_source.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  search.js
src/: ai_controller.cpp  ai_controller.h  analytics_tracking.cpp  analytics_tracking.h  angle.h  async_loader.cpp  async_loader.h  audio_collection.cpp  audio_collection.h  audio_engine.cpp  audio_engine.h  bezier.h  bulk_spline_evaluator.cpp  bulk_spline_evaluator.h  bus.cpp  bus.h  cardboard_controller.cpp  cardboard_controller.h  character.cpp  character.h  character_state_machine.cpp  character_state_machine.h  character_state_machine_def.json  common.h  compact_spline.cpp  compact_spline.h  controller.cpp  controller.h  curve.cpp  curve.h  dual_cubic.cpp  dual_cubic.h  font_manager.cpp  font_manager.h  full_screen_fader.cpp  full_screen_fader.h  game_camera.cpp  game_camera.h  game_state.cpp  game_state.h  (+80 more)
tests/: CMakeLists.txt
tests/angle/: angle_test.cpp
tests/audio_engine/: audio_engine_test.cpp
tests/character_state_machine/: character_state_machine_test.cpp
tests/curve/: curve_test.cpp
tests/font_manager/: font_manager_test.cpp
tests/impel/: impel_test.cpp
tests/magnets/: magnets_test.cpp
tests/range/: range_test.cpp
tests/spline/: spline_test.cpp
tests/vector_pool/: vector_pool_test.cpp
timidity/: Makefile.am  Makefile.in  README  common.c  common.h  config.h  filter.c  instrum.c  mix.c  output.h  playmidi.c  playmidi.h  readmidi.c  readmidi.h  resample.c  sdl_c.c  tables.c  tables.h  timidity.c  timidity.h
webp/: CMakeLists.txt  config.h.in
(+379 files in other folders)
